Bug 457098 - When using the default "Never save [images] in history" option, images appear anyway as the top item in the popup, but with an icon, rather than a thumbnail
Summary: When using the default "Never save [images] in history" option, images appear...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: 5.25.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: usability
: 468247 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-07-25 01:06 UTC by jakubby
Modified: 2024-08-30 17:41 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
You can see that this feature is enabled(which isn't the default). But this option is non-obvious to get to. (3.13 MB, video/mp4)
2022-07-25 01:06 UTC, jakubby
Details
Option disabled: (25.03 KB, image/png)
2022-07-26 19:45 UTC, jakubby
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jakubby 2022-07-25 01:06:50 UTC
Created attachment 150886 [details]
You can see that this feature is enabled(which isn't the default). But this option is non-obvious to get to.

SUMMARY
I have no clue where that setting option is.
I know it exists, and I feel it is just hidden somewhere in a place that doesn't feel easy to reach.
It's neither accessible from settings nor from settings of the applet, which are the only 2 places the user will search for this.

I just don't know why, but it just feels hidden and inaccessible.
I am sure it's just remains of this setting once being easily accessible(idk I didn't use KDE4, only 3 and 5) from the settings app.


STEPS TO REPRODUCE
1. Bring a person who doesn't know where this option is to a computer, and ask them to enable thumbnails in the clipboard.
2. :( 

OBSERVED RESULT
They can't find it.

EXPECTED RESULT
*Right click->clipboard settings->[ ] Show image thumbnails
It can be anywhere on the Configure clipboard screen for all I care.
"General"/"Action menu"/"Presentation"/"Actions Configuration"/"Shortcuts"
It can be behind an "Advanced button" in "General".

Maybe Settings->Workspace Behavior-> <some intermediate step> ->Clipboard
In either case this option would be 1000% more accessible this way.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 5.18.12
KDE Plasma Version: 5.25.3
KDE Frameworks Version: 5.96.0
Qt Version:  5.15.5+kde+r170-1
Comment 1 Nate Graham 2022-07-26 18:55:25 UTC
I don't understand what the video is showing me. What is the exact problem you're having? What option are you talking about? I can't actually find any such option anywhere. Can you be specific about what option you're talking about, how it's named, and where exactly I can can find it?
Comment 2 jakubby 2022-07-26 19:45:37 UTC
Created attachment 150931 [details]
Option disabled:

(In reply to Nate Graham from comment #1)

>What is the exact problem you're having?
One contributor told me on reddit where this option was, but I don't have that account anymore and it's hard to find the old thread.
The other contributor(I asked the question again after 2 months) claims this option is by default turned on, and that there simply isn't any setting for it, but it isn't true for me.
To use this option on another computer(now that I forgot how to enable it), I would have to copy my kde config/rootfs to my desktop.

>I don't understand what the video is showing me. 
The video shows the option being turned on, by default Clipboard doesn't render thumbnails.
The image shows the default state.
I know it is in polish, but the video shows that there exists no option that even slightly relates to "being able to view thumbnails of images in the clipboard, as well as provide clipboard history of image data".

> I can't actually find any such option anywhere.
Put simply it's so extremely well hidden and that's a problem!

>Can you be specific about what option you're talking about, how it's named, and where exactly I can can find it?
I am able to only be specific to it's function. Because I don't know where it was placed nor how it's called exactly.
I just know it controls Image thumbnails in clipboard plasmoid, as well as makes the clipboard remember more than one image.
Comment 3 Nate Graham 2022-07-26 19:47:15 UTC
I think we need to step back and re-define the exact problem you're having. Can you describe the problem very clearly? Let's focus on the problem itself, not any real or hypothetical options to change behavior.
Comment 4 jakubby 2022-07-26 20:00:09 UTC
(In reply to Nate Graham from comment #3)
> I think we need to step back and re-define the exact problem you're having.
> Can you describe the problem very clearly? Let's focus on the problem
> itself, not any real or hypothetical options to change behavior.

I probably will not give a satisfying answer. But I will try to give multiple answers.

1. Yeaaaah I can clone the rootfs from my other device.
2. I once was able to view images I copied to clipboard.
I've made a fresh installation.
I am unable to view images copied to clipboard, in the clipboard applet.
Comment 5 Nate Graham 2022-07-26 20:12:59 UTC
> I am unable to view images copied to clipboard, in the clipboard applet.
What does that mean? What do you see instead? Can you attach a screenshot of what you do see?

Shot in the dark: can you paste the contents of your ~/.config/klipperrc file?
Comment 6 jakubby 2022-07-26 20:19:58 UTC
(In reply to Nate Graham from comment #5)
> > I am unable to view images copied to clipboard, in the clipboard applet.
> What does that mean? What do you see instead? Can you attach a screenshot of
> what you do see?
> 
Machine 1:
Attached Video;
Machine 2:
Attached Image;

> Shot in the dark: can you paste the contents of your ~/.config/klipperrc
> file?
Machine with images:
```
[General]
IgnoreImages=false
Version=5.24.2
```

Machine without images:
```
[General]
PopupInfoMessageShown=false
SelectionTextOnly=false
SyncClipboards=true
Version=5.25.3
```
Comment 7 Nate Graham 2022-07-27 15:17:24 UTC
In both cases, are you copying the image from Spectacle using the "Copy Image to Clipboard" button?
Comment 8 jakubby 2022-07-27 16:11:09 UTC
(In reply to Nate Graham from comment #7)
> In both cases, are you copying the image from Spectacle using the "Copy
> Image to Clipboard" button?

Yes
Comment 9 Nate Graham 2022-07-27 18:46:06 UTC
If you copy the text in the ~/.config/klipperrc file from the working machine to the broken machine and then reboot, does it start working there?
Comment 10 jakubby 2022-07-27 18:48:00 UTC
(In reply to Nate Graham from comment #9)
> If you copy the text in the ~/.config/klipperrc file from the working
> machine to the broken machine and then reboot, does it start working there?

Yes, I did it right away, it does start working there
Comment 11 Nate Graham 2022-07-27 18:51:40 UTC
Can you narrow down which exact line in the config file makes it start working? There aren't a lot of options there :)
Comment 12 jakubby 2022-07-27 18:52:19 UTC
(In reply to Nate Graham from comment #11)
> Can you narrow down which exact line in the config file makes it start
> working? There aren't a lot of options there :)


IgnoreImages=false
Comment 13 Nate Graham 2022-07-27 19:07:27 UTC
I had a feeling. So the setting you want in the config dialog is:

Non-text selections: (o) Only when explicitly copied

...Whereas the default is:

Non-text selections: (o) Never save in history

There are a few bugs here:
1. "only when explicitly copied" is an inaccurate string because it doesn't tell you what will happen for non-text selections that are explicitly copied.
2. With the default "Never save [images] in history" setting, copying an image anyway makes the image appear as the top history item anyway, so it's not obvious what's going on. Under the hood, this image is merely appearing temporarily, and isn't actually being saved to the history, so if you reboot the machine, it won't be there anymore.  But that's not obvious
3. When this happens, the thing shown as the top item is an image *icon* rather than an image *thumbnail*.

Proposal:
1. Change the text of the middle radio button icon to "Only save to history when explicitly copied"
2. Make that option the default
3. When using the "Never save in history" option, show a thumbnail for copied images instead of an icon

What do you think, Jonathan?
Comment 14 jakubby 2022-09-04 01:05:17 UTC
(In reply to Nate Graham from comment #13)
> I had a feeling. So the setting you want in the config dialog is:
> 
> Non-text selections: (o) Only when explicitly copied
> 
> ...Whereas the default is:
> 
> Non-text selections: (o) Never save in history
> 
> There are a few bugs here:
> 1. "only when explicitly copied" is an inaccurate string because it doesn't
> tell you what will happen for non-text selections that are explicitly copied.
> 2. With the default "Never save [images] in history" setting, copying an
> image anyway makes the image appear as the top history item anyway, so it's
> not obvious what's going on. Under the hood, this image is merely appearing
> temporarily, and isn't actually being saved to the history, so if you reboot
> the machine, it won't be there anymore.  But that's not obvious
> 3. When this happens, the thing shown as the top item is an image *icon*
> rather than an image *thumbnail*.
> 
> Proposal:
> 1. Change the text of the middle radio button icon to "Only save to history
> when explicitly copied"
> 2. Make that option the default
> 3. When using the "Never save in history" option, show a thumbnail for
> copied images instead of an icon
> 
> What do you think, Jonathan?

You know, I think I finally understand why I opened this bug request.
Go to clipboard settings, change the state from "Never save in history" to "Only when explicitly copied".
What happens is you need to restart plasmashell for the change to take place, so I never noticed that this option did what I wanted.
Comment 15 Nate Graham 2024-08-20 21:30:57 UTC
*** Bug 468247 has been marked as a duplicate of this bug. ***
Comment 16 Bug Janitor Service 2024-08-29 18:29:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4659
Comment 17 Noah Davis 2024-08-30 17:41:52 UTC
Git commit d77e14249481c1839a57dd5f740d85f3df154557 by Noah Davis.
Committed on 30/08/2024 at 17:40.
Pushed by ndavis into branch 'master'.

klipper: always display image thumbnail when showing image delegate

Five years ago, we changed klipper to show an icon instead when force
copying images while non-text copying was disabled. This makes
it hard to identify the image though and the original reason for doing this
seems to be gone.

Original change for context: https://phabricator.kde.org/D22684, commit 423308f854c4b76c72da4e3263614c7b20642ebf
Related: bug 465417

M  +0    -4    klipper/historymodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/d77e14249481c1839a57dd5f740d85f3df154557