klipper: always display image thumbnail when showing image delegate

Five years ago, we changed klipper to show an icon instead when force
copying images while non-text copying was disabled. This makes
it hard to identify the image though and the original reason for doing this
seems to be gone.

Original change for context: https://phabricator.kde.org/D22684, commit 423308f854c4b76c72da4e3263614c7b20642ebf

BUG: 457098
BUG: 465417